Seems like it's correct code cause testing of algorithm for adding binary numbers is correct.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
+cmake_minimum_required(VERSION 3.16)
+
 project(Algorithm)
 
 add_executable(${PROJECT_NAME} source.cpp)
-file(COPY "${CMAKE_CURRENT_SOURCE_TREE}MarkovAlgorithm.txt" DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+file(COPY ${CMAKE_CURRENT_SOURCE_TREE}MarkovAlgorithms.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
